[project]
name = "imm-archive"
version = "0.0.0"
description = "Immigration social-media archive — ingest pipeline and tooling."
requires-python = ">=3.12"
dependencies = [
  "pyyaml>=6.0",
  "pyarrow>=17.0",
  "polars>=1.10",
  "httpx>=0.27",
  "python-ulid>=3.0",
  "structlog>=24.4",
]

[dependency-groups]
dev = [
  "ruff>=0.7",
  "mypy>=1.13",
  "pytest>=8.3",
  "types-PyYAML",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["data", "raw", "tests/fixtures", "extension/dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["scripts", "tests"]
exclude = ["tests/fixtures"]

[[tool.mypy.overrides]]
module = ["pyarrow.*", "polars.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
